test/sema/function_type_invalid.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

// CHECK: [[# @LINE + 1 ]]:12: error: function type with 'void' argument is not allowed
fn bar(): (void) -> void {
  return foo;
}

fn main(): void {}

// CHECK-NOT: {{.*error.*}}
